# dictable

./: LICENSE  README.md  example.csv  example.py  pyproject.toml
src/dictable/: dictable.py
tests/: test_auto_type.py  test_dictable_build.py  test_dictable_empty.py  test_dictable_errors.py  test_dictable_save_and_load_csv.py  test_dictable_transforms.py
tests/working_files/: test_dictable_save_and_load.csv
