[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictable"
version = "0.0.1"
authors = [
  { name="Janusz Skotarczak", email="skotarczak.janusz@gmail.com" },
]
description = "Working with tables as dictionary lists."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Snakeoi/dictable"
"Bug Tracker" = "https://github.com/Snakeoi/dictable/issues"